IllinoisGRMHD: inlined_functions -- PPEOS Patch -- Added a new function to perform the Font fix loop and determine rho_b from an initial guess

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__inlined_functions.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__inlined_functions.ipynb
@@ -1209,6 +1209,143 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outfile_path__inlined_functions__C\n",
+    "\n",
+    "/* Function    : font_fix__rhob_loop()\n",
+    " * Authors     : Leo Werneck\n",
+    " * Description : Determines rhob using the font fix prescription\n",
+    " * Dependencies: find_polytropic_K_and_Gamma_index()\n",
+    " *             : compute_P_cold__eps_cold()\n",
+    " * Reference   : Etienne et al. (2011) [https://arxiv.org/pdf/1112.0568.pdf]\n",
+    " *\n",
+    " * Inputs      : maxits          - maximum number of iterations allowed\n",
+    " *             : tol             - font fix tolerance\n",
+    " *             : W               - See eq. (A26)\n",
+    " *             : Sf2             - S_{fluid}^{2}, see eq. (A24)\n",
+    " *             : Psim6           - This is equal to sqrt(\\gamma)\n",
+    " *             : sdots           - \\tilde{S}_{\\mu}\\tilde{S}^{\\mu}\n",
+    " *             : BbardotS2       - (\\bar{B}^{\\mu}S_{\\mu})^{2}, \n",
+    " *             : B2bar           - \\bar{B}^{2}, see eq. (A28)\n",
+    " *             : CONSERVS        - Array of conservative variables\n",
+    " *             : eos             - Struct of EOS parameters\n",
+    " *             : rho_in          - Initial value of rhob\n",
+    " *             : rho_out         - Output variable\n",
+    " *\n",
+    " * Outputs     : rho_out         - Updated value of rhob\n",
+    " *             : return value: 0 - Font fix worked\n",
+    " *             : return value: 1 - Font fix failed\n",
+    " */\n",
+    "inline int font_fix__rhob_loop( int maxits, CCTK_REAL tol,\n",
+    "                                CCTK_REAL W, CCTL_REAL Sf2, CCTK_REAL Psim6, CCTK_REAL sdots, CCTK_REAL BbardotS2, CCTK_REAL B2bar, \n",
+    "                                CCTK_REAL *CONSERVS,\n",
+    "                                eos_struct eos, CTTK_REAL rho_in, CCTK_REAL &rho_out ) {\n",
+    "\n",
+    "  /* Declare basic variables */\n",
+    "  bool fontcheck=true;\n",
+    "  int itcount = 0, j0, j1;\n",
+    "  CCTK_REAL W0, Sf20, rhob0, rhob1, h, P_cold, eps_cold;\n",
+    "\n",
+    "  //////////////////////\n",
+    "  // OUTER LOOP START //\n",
+    "  //////////////////////\n",
+    "  while(fontcheck && itcount < maxits) {\n",
+    "\n",
+    "    /* Set variables to their input values */\n",
+    "    itcount++;\n",
+    "    W0    = W;\n",
+    "    Sf20  = Sf2;\n",
+    "    rhob1 = rho_in;\n",
+    "\n",
+    "    /* Based on rho_in (i.e. rhob1), determine the\n",
+    "     * polytropic index j1\n",
+    "     */\n",
+    "    j1 = find_polytropic_K_and_Gamma_index(eos,rhob1);\n",
+    "\n",
+    "    //////////////////////\n",
+    "    // INNER LOOP START //\n",
+    "    //////////////////////\n",
+    "    do {\n",
+    "\n",
+    "      /* Set rhob0/j0 to be equal to the rhob/j used\n",
+    "       * in the previous iteration, i.e. rhob1/j1.\n",
+    "       */\n",
+    "      rhob0 = rhob1;\n",
+    "      j0    = j1;\n",
+    "\n",
+    "      /* Compute h using h_cold and our polytropic EOS\n",
+    "       * .------------------------------------------.\n",
+    "       * | h = h_cold = 1 + eps_cold + P_cold/rhob. |\n",
+    "       * .------------------------------------------.\n",
+    "       */\n",
+    "      compute_P_cold__eps_cold(eos,rhob0, P_cold, eps_cold);\n",
+    "      h = 1.0 + eps_cold + P_cold/rhob0;\n",
+    "\n",
+    "      /* Update rhob using eq. (A62) in Etienne et al. (2011)\n",
+    "       *          https://arxiv.org/pdf/1112.0568.pdf\n",
+    "       * .---------------------------------------------------------------------------.\n",
+    "       * | rhob = rho_star * Psi^{-6} / sqrt( 1 + S_fluid^{2}/( (rho_star*h)^{2} ) ) |\n",
+    "       * .---------------------------------------------------------------------------.\n",
+    "       */\n",
+    "      rhob1 = CONSERVS[RHOSTAR]*Psim6/sqrt(1.0+Sf20/SQR(CONSERVS[RHOSTAR]*h));  \n",
+    "\n",
+    "      /* Update j1 */\n",
+    "      j1 = find_polytropic_K_and_Gamma_index(eos,rhob1);\n",
+    "\n",
+    "    }  while( fabs(rhob1-rhob0) > rhob1*tol || j1 != j0);\n",
+    "    //////////////////////\n",
+    "    //  INNER LOOP END  //\n",
+    "    //////////////////////\n",
+    "\n",
+    "    /* Output the last value of rhob */\n",
+    "    rho_out = rhob1;\n",
+    "\n",
+    "    /* Perform physical checks on the variables\n",
+    "     * and output the last value of h obtained\n",
+    "     */\n",
+    "    compute_P_cold__eps_cold(eos,rho_out, P_cold, eps_cold);\n",
+    "    h     = 1.0 + eps_cold + P_cold/rhob_out;\n",
+    "\n",
+    "    /* Set W based on eq. (A60) in Etienne et al. (2011)\n",
+    "     *       https://arxiv.org/pdf/1112.0568.pdf\n",
+    "     * .-------------------------------------------------------.\n",
+    "     * | W = psi^{-6} * sqrt( S_fluid^{2} + (rho_star*h)^{2} ) |\n",
+    "     * .-------------------------------------------------------.\n",
+    "     */  \n",
+    "    W = sqrt( Sf20 + SQR(CONSERVS[RHOSTAR]*h))*Psim6;\n",
+    "\n",
+    "    /* Then update S_{fluid}^{2} using eq. (A61) in Etienne et al. (2011)\n",
+    "     *           https://arxiv.org/pdf/1112.0568.pdf\n",
+    "     * .---------------------------------------------------------------------------.\n",
+    "     * | S_fluid^{2} = ( W^{2}*S^{2} + (B.S)^2*(B^{2} + 2W) )/( ( W + B^{2} )^{2} )|\n",
+    "     * .---------------------------------------------------------------------------.\n",
+    "     */\n",
+    "    Sf2 = (SQR(W)*sdots + BbardotS2*(B2bar + 2.0*W))/SQR(W+B2bar);\n",
+    "\n",
+    "    if ( fabs(W-W0) < W*tol && fabs(Sf20-Sf2) < Sf2*tol) fontcheck=false;\n",
+    "  }\n",
+    "  //////////////////////\n",
+    "  //  OUTER LOOP END  //\n",
+    "  //////////////////////\n",
+    "\n",
+    "  /* If the code converged before the max \n",
+    "   * number of iterations were exceeded,\n",
+    "   * return 0, otherwise return 1.\n",
+    "   */\n",
+    "  if(fontcheck || itcount >= maxits) {\n",
+    "    return 1;\n",
+    "  }\n",
+    "  else {\n",
+    "    return 0;\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2639,7 +2776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
