--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/A_i_rhs_no_gauge_terms.C\n"
+      "Writing ../src/A_i_rhs_no_gauge_terms.C\n"
      ]
     }
    ],
@@ -240,16 +240,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-10-09 22:20:01--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/A_i_rhs_no_gauge_terms.C\r\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.2, 18.205.93.1\r\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
+      "--2019-10-10 20:06:12--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/A_i_rhs_no_gauge_terms.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.0, 18.205.93.2\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\r\n",
       "HTTP request sent, awaiting response... 200 OK\r\n",
       "Length: 6441 (6.3K) [text/plain]\r\n",
       "Saving to: ‘../src/A_i_rhs_no_gauge_terms-original.C’\r\n",
       "\r\n",
       "../src/A_i_rhs_no_g 100%[===================>]   6.29K  --.-KB/s    in 0s      \r\n",
       "\r\n",
-      "2019-10-09 22:20:01 (176 MB/s) - ‘../src/A_i_rhs_no_gauge_terms-original.C’ saved [6441/6441]\r\n",
+      "2019-10-10 20:06:12 (293 MB/s) - ‘../src/A_i_rhs_no_gauge_terms-original.C’ saved [6441/6441]\r\n",
       "\r\n",
       "Validation test for A_i_rhs_no_gauge_terms.C: PASSED!\n"
      ]
@@ -395,7 +395,7 @@
       "Refer to http://pandoc.org/installing.html.\r\n",
       "Continuing with doubts...\r\n",
       "  check_pandoc_version()\r\n",
-      "[NbConvertApp] Writing 60133 bytes to Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.tex\r\n",
+      "[NbConvertApp] Writing 65348 bytes to Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
