--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.ipynb
@@ -369,16 +369,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-10-09 22:20:32--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\r\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.2, 18.205.93.1\r\n",
+      "--2019-10-10 20:06:51--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\r\n",
       "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
       "HTTP request sent, awaiting response... 200 OK\r\n",
       "Length: 15797 (15K) [text/plain]\r\n",
       "Saving to: ‘../src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs-original.C’\r\n",
       "\r\n",
-      "../src/Lorenz_psi6p 100%[===================>]  15.43K  --.-KB/s    in 0.002s  \r\n",
+      "../src/Lorenz_psi6p 100%[===================>]  15.43K  --.-KB/s    in 0.05s   \r\n",
       "\r\n",
-      "2019-10-09 22:20:32 (8.03 MB/s) - ‘../src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs-original.C’ saved [15797/15797]\r\n",
+      "2019-10-10 20:06:51 (288 KB/s) - ‘../src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs-original.C’ saved [15797/15797]\r\n",
       "\r\n",
       "Validation test for Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C: PASSED!\n"
      ]
@@ -524,7 +524,7 @@
       "Refer to http://pandoc.org/installing.html.\r\n",
       "Continuing with doubts...\r\n",
       "  check_pandoc_version()\r\n",
-      "[NbConvertApp] Writing 89311 bytes to Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.tex\r\n",
+      "[NbConvertApp] Writing 94609 bytes to Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
