--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+      "Writing ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
      ]
     }
    ],
@@ -727,7 +727,8 @@
     "  compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold(U,eos,P_cold,eps_cold,dPcold_drho,eps_th,h_enthalpy,Gamma_cold);\n",
     "\n",
     "  // Pressure floor & ceiling:\n",
-    "  enforce_pressure_floor_ceiling(stats,eos.K_poly,P_cold,METRIC_LAP_PSI4[PSI6],Psi6threshold,U[RHOB],rho_b_atm,  U[PRESSURE]);\n",
+    "  int polytropic_index = find_polytropic_K_and_Gamma_index(eos,U[RHOB]);\n",
+    "  enforce_pressure_floor_ceiling(stats,eos.K_poly[polytropic_index],P_cold,METRIC_LAP_PSI4[PSI6],Psi6threshold,U[RHOB],rho_b_atm,  U[PRESSURE]);\n",
     "\n",
     "  // Possibly adjusted pressure, so recompute eps & h:\n",
     "  CCTK_REAL eps = eps_cold + (U[PRESSURE]-P_cold)/(Gamma_th-1.0)/U[RHOB];\n",
@@ -1108,16 +1109,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-10-09 22:21:17--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\r\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.2, 18.205.93.0, 18.205.93.1\r\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.2|:443... connected.\r\n",
+      "--2019-10-10 20:07:43--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
       "HTTP request sent, awaiting response... 200 OK\r\n",
       "Length: 14983 (15K) [text/plain]\r\n",
       "Saving to: ‘../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs-original.C’\r\n",
       "\r\n",
-      "../src/apply_tau_fl 100%[===================>]  14.63K  --.-KB/s    in 0s      \r\n",
+      "../src/apply_tau_fl 100%[===================>]  14.63K  --.-KB/s    in 0.005s  \r\n",
       "\r\n",
-      "2019-10-09 22:21:17 (74.0 MB/s) - ‘../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs-original.C’ saved [14983/14983]\r\n",
+      "2019-10-10 20:07:43 (3.07 MB/s) - ‘../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs-original.C’ saved [14983/14983]\r\n",
       "\r\n",
       "Validation test for apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C: FAILED!\n",
       "Diff:\n",
@@ -1481,7 +1482,7 @@
       "Refer to http://pandoc.org/installing.html.\r\n",
       "Continuing with doubts...\r\n",
       "  check_pandoc_version()\r\n",
-      "[NbConvertApp] Writing 117600 bytes to Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\r\n",
+      "[NbConvertApp] Writing 135424 bytes to Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
