--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_utoprim_2d.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_utoprim_2d.ipynb
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/harm_utoprim_2d.c\n"
+      "Writing ../src/harm_utoprim_2d.c\n"
      ]
     }
    ],
@@ -1937,16 +1937,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-10-09 22:22:25--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/harm_utoprim_2d.c\r\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.0, 18.205.93.2\r\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\r\n",
+      "--2019-10-10 20:08:50--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/harm_utoprim_2d.c\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
       "HTTP request sent, awaiting response... 200 OK\r\n",
       "Length: 22259 (22K) [text/plain]\r\n",
       "Saving to: ‘../src/harm_utoprim_2d-original.c’\r\n",
       "\r\n",
-      "../src/harm_utoprim 100%[===================>]  21.74K  --.-KB/s    in 0.002s  \r\n",
+      "../src/harm_utoprim 100%[===================>]  21.74K  --.-KB/s    in 0.001s  \r\n",
       "\r\n",
-      "2019-10-09 22:22:26 (10.6 MB/s) - ‘../src/harm_utoprim_2d-original.c’ saved [22259/22259]\r\n",
+      "2019-10-10 20:08:50 (24.5 MB/s) - ‘../src/harm_utoprim_2d-original.c’ saved [22259/22259]\r\n",
       "\r\n",
       "Validation test for harm_utoprim_2d.c: FAILED!\n",
       "Diff:\n",
@@ -2504,7 +2504,7 @@
       "Refer to http://pandoc.org/installing.html.\r\n",
       "Continuing with doubts...\r\n",
       "  check_pandoc_version()\r\n",
-      "[NbConvertApp] Writing 212961 bytes to Tutorial-IllinoisGRMHD__harm_utoprim_2d.tex\r\n",
+      "[NbConvertApp] Writing 213253 bytes to Tutorial-IllinoisGRMHD__harm_utoprim_2d.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
