--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
@@ -169,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/mhdflux.C\n"
+      "Writing ../src/mhdflux.C\n"
      ]
     }
    ],
@@ -522,9 +522,9 @@
     "  // Compute v02 = v_A^2 + c_s^2*(1.0-v_A^2), where c_s = sound speed, and v_A = Alfven velocity\n",
     "  CCTK_REAL v02r,v02l;\n",
     "  // First right face\n",
-    "  compute_v02(dPcold_drhor,eos.Gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
+    "  compute_v02(dPcold_drhor,Gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
     "  // Then left face.\n",
-    "  compute_v02(dPcold_drhol,eos.Gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n",
+    "  compute_v02(dPcold_drhol,Gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n",
     "\n",
     "  int offset=flux_dirn-1;\n",
     "\n",
@@ -805,16 +805,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-10-09 22:22:50--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/mhdflux.C\r\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.0, 18.205.93.2\r\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\r\n",
+      "--2019-10-10 20:09:14--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/mhdflux.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
       "HTTP request sent, awaiting response... 200 OK\r\n",
       "Length: 11398 (11K) [text/plain]\r\n",
       "Saving to: ‘../src/mhdflux-original.C’\r\n",
       "\r\n",
       "../src/mhdflux-orig 100%[===================>]  11.13K  --.-KB/s    in 0s      \r\n",
       "\r\n",
-      "2019-10-09 22:22:51 (78.8 MB/s) - ‘../src/mhdflux-original.C’ saved [11398/11398]\r\n",
+      "2019-10-10 20:09:14 (72.0 MB/s) - ‘../src/mhdflux-original.C’ saved [11398/11398]\r\n",
       "\r\n",
       "Validation test for mhdflux.C: FAILED!\n",
       "Diff:\n",
@@ -831,11 +831,11 @@
       "60c60\n",
       "<   compute_v02(dPcold_drhor,eos.gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
       "---\n",
-      ">   compute_v02(dPcold_drhor,eos.Gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
+      ">   compute_v02(dPcold_drhor,Gamma_th,eps_thr,h_r,smallbr,Ur,v02r);\n",
       "62c62\n",
       "<   compute_v02(dPcold_drhol,eos.gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n",
       "---\n",
-      ">   compute_v02(dPcold_drhol,eos.Gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n"
+      ">   compute_v02(dPcold_drhol,Gamma_th,eps_thl,h_l,smallbl,Ul,v02l);\n"
      ]
     }
    ],
@@ -1049,7 +1049,7 @@
       "Refer to http://pandoc.org/installing.html.\r\n",
       "Continuing with doubts...\r\n",
       "  check_pandoc_version()\r\n",
-      "[NbConvertApp] Writing 94286 bytes to Tutorial-IllinoisGRMHD__mhdflux.tex\r\n",
+      "[NbConvertApp] Writing 104004 bytes to Tutorial-IllinoisGRMHD__mhdflux.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
