--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
@@ -681,7 +681,7 @@
     "\t// DEPENDENCIES: RHOB face values, RHOB(MINUS2,MINUS1,PLUS0,PLUS1,PLUS2), P(MINUS1,PLUS0,PLUS1), and slope_lim_dU[RHOB](MINUS1,PLUS1)\n",
     "\tCCTK_REAL P_cold=0,Gamma_cold=0;\n",
     "\tcompute_P_cold__Gamma_cold(U[RHOB][PLUS0],eos,  P_cold,Gamma_cold);\n",
-    "\tsteepen_rho(U,slope_lim_dU,   eos.Gamma_th,P_cold,Gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
+    "\tsteepen_rho(U,slope_lim_dU,   Gamma_th,P_cold,Gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
     "\n",
     "\t// Output rho\n",
     "\tout_prims_r[RHOB].gf[index_arr[flux_dirn][PLUS0]] = Ur[RHOB][PLUS0];\n",
@@ -1744,16 +1744,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-10-09 22:23:19--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/loop_defines_reconstruction.h\r\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\r\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
+      "--2019-10-10 20:09:40--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/loop_defines_reconstruction.h\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.0, 18.205.93.2\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\r\n",
       "HTTP request sent, awaiting response... 200 OK\r\n",
       "Length: 2472 (2.4K) [text/plain]\r\n",
       "Saving to: ‘../src/loop_defines_reconstruction-original.h’\r\n",
       "\r\n",
       "../src/loop_defines 100%[===================>]   2.41K  --.-KB/s    in 0s      \r\n",
       "\r\n",
-      "2019-10-09 22:23:20 (90.7 MB/s) - ‘../src/loop_defines_reconstruction-original.h’ saved [2472/2472]\r\n",
+      "2019-10-10 20:09:41 (118 MB/s) - ‘../src/loop_defines_reconstruction-original.h’ saved [2472/2472]\r\n",
       "\r\n",
       "Validation test for loop_defines_reconstruction.h: PASSED!\n"
      ]
@@ -1825,16 +1825,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-10-09 22:23:20--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/reconstruct_set_of_prims_PPM.C\r\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\r\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
+      "--2019-10-10 20:09:41--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/reconstruct_set_of_prims_PPM.C\r\n",
+      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.0, 18.205.93.2\r\n",
+      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\r\n",
       "HTTP request sent, awaiting response... 200 OK\r\n",
       "Length: 18269 (18K) [text/plain]\r\n",
       "Saving to: ‘../src/reconstruct_set_of_prims_PPM-original.C’\r\n",
       "\r\n",
-      "../src/reconstruct_ 100%[===================>]  17.84K  --.-KB/s    in 0.002s  \r\n",
+      "../src/reconstruct_ 100%[===================>]  17.84K  --.-KB/s    in 0.008s  \r\n",
       "\r\n",
-      "2019-10-09 22:23:20 (7.38 MB/s) - ‘../src/reconstruct_set_of_prims_PPM-original.C’ saved [18269/18269]\r\n",
+      "2019-10-10 20:09:42 (2.09 MB/s) - ‘../src/reconstruct_set_of_prims_PPM-original.C’ saved [18269/18269]\r\n",
       "\r\n",
       "Validation test for reconstruct_set_of_prims_PPM.C: FAILED!\n",
       "Diff:\n",
@@ -1853,7 +1853,7 @@
       "---\n",
       "> \tCCTK_REAL P_cold=0,Gamma_cold=0;\n",
       "> \tcompute_P_cold__Gamma_cold(U[RHOB][PLUS0],eos,  P_cold,Gamma_cold);\n",
-      "> \tsteepen_rho(U,slope_lim_dU,   eos.Gamma_th,P_cold,Gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
+      "> \tsteepen_rho(U,slope_lim_dU,   Gamma_th,P_cold,Gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
       "231c231\n",
       "< static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL gamma_cold,\n",
       "---\n",
@@ -2339,7 +2339,7 @@
       "Refer to http://pandoc.org/installing.html.\r\n",
       "Continuing with doubts...\r\n",
       "  check_pandoc_version()\r\n",
-      "[NbConvertApp] Writing 155029 bytes to Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.tex\r\n",
+      "[NbConvertApp] Writing 180441 bytes to Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
