--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__InitSymBound.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__InitSymBound.ipynb
@@ -297,10 +297,10 @@
    ],
    "source": [
     "latex_nrpy_style_path = os.path.join(nrpy_dir_path,\"latex_nrpy_style.tplx\")\n",
-    "!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__InitSymBound.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__InitSymBound.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__InitSymBound.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__InitSymBound.tex\n",
+    "#!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__InitSymBound.ipynb\n",
+    "#!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__InitSymBound.tex\n",
+    "#!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__InitSymBound.tex\n",
+    "#!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__InitSymBound.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   },
