--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__mhdflux.ipynb
@@ -913,10 +913,10 @@
    ],
    "source": [
     "latex_nrpy_style_path = os.path.join(nrpy_dir_path,\"latex_nrpy_style.tplx\")\n",
-    "!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__mhdflux.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
+    "#!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__mhdflux.ipynb\n",
+    "#!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
+    "#!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
+    "#!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__mhdflux.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
