IllinoisGRMHD: PPEOS Patch -- Fixed all compilation issues. If any extra is found, please let me know so that I can update the tutorial notebook asap

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/driver_evaluate_MHD_rhs.C\n"
+      "Writing ../src/driver_evaluate_MHD_rhs.C\n"
      ]
     }
    ],
@@ -575,7 +575,8 @@
     "  // 1) Compute tau_rhs extrinsic curvature terms, and\n",
     "  // 2) Compute TUPmunu.\n",
     "  // This function is housed in the file: \"compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu.C\"\n",
-    "  compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu(cctkGH,cctk_lsh,cctk_nghostzones,dX,metric,in_prims,TUPmunu,eos,\n",
+    "  compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu(cctkGH,cctk_lsh,cctk_nghostzones,dX,metric,in_prims,TUPmunu,\n",
+    "                                                        eos, Gamma_th,\n",
     "                                                        gtupxy,gtupxz,gtupyz,\n",
     "                                                        kxx,kxy,kxz,kyy,kyz,kzz,\n",
     "                                                        tau_rhs);"
@@ -1504,7 +1505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/driver_evaluate_MHD_rhs.h\n"
+      "Writing ../src/driver_evaluate_MHD_rhs.h\n"
      ]
     }
    ],
@@ -1521,7 +1522,7 @@
     "\n",
     "static void compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu\n",
     "(const cGH *cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,CCTK_REAL *dX,CCTK_REAL **metric,gf_and_gz_struct *prims,\n",
-    " CCTK_REAL **TUPmunu,eos_struct &eos,\n",
+    " CCTK_REAL **TUPmunu,eos_struct &eos, CCTK_REAL Gamma_th,\n",
     " CCTK_REAL *gupxy,CCTK_REAL *gupxz,CCTK_REAL *gupyz,\n",
     " CCTK_REAL *kxx,CCTK_REAL *kxy,CCTK_REAL *kxz,CCTK_REAL *kyy,CCTK_REAL *kyz,CCTK_REAL *kzz,\n",
     " CCTK_REAL *tau_rhs);\n",
@@ -1601,7 +1602,12 @@
       "<   eos.k_tab[0]=k_tab[0];   eos.k_tab[1]=k_tab[1];\n",
       "<   eos.gamma_tab[0]=gamma_tab[0]; eos.gamma_tab[1]=gamma_tab[1];\n",
       "---\n",
-      ">   initialize_EOS_struct_from_input(eos);\n"
+      ">   initialize_EOS_struct_from_input(eos);\n",
+      "167c170,171\n",
+      "<   compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu(cctkGH,cctk_lsh,cctk_nghostzones,dX,metric,in_prims,TUPmunu,eos,\n",
+      "---\n",
+      ">   compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu(cctkGH,cctk_lsh,cctk_nghostzones,dX,metric,in_prims,TUPmunu,\n",
+      ">                                                         eos, Gamma_th,\n"
      ]
     }
    ],
@@ -1673,7 +1679,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for driver_evaluate_MHD_rhs.h: PASSED!\n"
+      "Validation test for driver_evaluate_MHD_rhs.h: FAILED!\n",
+      "Diff:\n",
+      "12c12\n",
+      "<  CCTK_REAL **TUPmunu,eos_struct &eos,\n",
+      "---\n",
+      ">  CCTK_REAL **TUPmunu,eos_struct &eos, CCTK_REAL Gamma_th,\n"
      ]
     }
    ],
@@ -1741,25 +1752,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 128440 bytes to Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "latex_nrpy_style_path = os.path.join(nrpy_dir_path,\"latex_nrpy_style.tplx\")\n",
     "#!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb\n",
