--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__MoL_registration.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__MoL_registration.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/MoL_registration.C\n"
+      "Writing ../src/MoL_registration.C\n"
      ]
     }
    ],
@@ -260,25 +260,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__MoL_registration.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 37357 bytes to Tutorial-IllinoisGRMHD__MoL_registration.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "latex_nrpy_style_path = os.path.join(nrpy_dir_path,\"latex_nrpy_style.tplx\")\n",
     "#!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__MoL_registration.ipynb\n",
