--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.ipynb
@@ -129,7 +129,7 @@
     "#define A1  -0.0625\n",
     "#define COMPUTE_FCVAL(METRICm2,METRICm1,METRIC,METRICp1) (AM2*(METRICm2) + AM1*(METRICm1) + A0*(METRIC) + A1*(METRICp1))\n",
     "\n",
-    "static inline void mhdflux(int i,int j,int k,const int flux_dirn,CCTK_REAL *Ul,CCTK_REAL *Ur,  CCTK_REAL *FACEVAL,CCTK_REAL *FACEVAL_LAPSE_PSI4,eos_struct &eos,\n",
+    "static inline void mhdflux(int i,int j,int k,const int flux_dirn,CCTK_REAL *Ul,CCTK_REAL *Ur,  CCTK_REAL *FACEVAL,CCTK_REAL *FACEVAL_LAPSE_PSI4,eos_struct &eos, CCTK_REAL Gamma_th,\n",
     "                           CCTK_REAL &cmax,CCTK_REAL &cmin,\n",
     "                           CCTK_REAL &rho_star_flux,CCTK_REAL &tau_flux,CCTK_REAL &st_x_flux,CCTK_REAL &st_y_flux,CCTK_REAL &st_z_flux);\n",
     "\n",
@@ -200,7 +200,7 @@
     "\n",
     "\t//-----------------------------------------------------------------------------\n",
     "\t// Next compute fluxes for \\tilde{S}_i, tau, and rho_*\n",
-    "\tmhdflux(i,j,k,flux_dirn,Ul  ,Ur  ,FACEVAL  ,FACEVAL_LAPSE_PSI4  ,eos, cmax[index],cmin[index],\n",
+    "\tmhdflux(i,j,k,flux_dirn,Ul  ,Ur  ,FACEVAL  ,FACEVAL_LAPSE_PSI4  ,eos, Gamma_th, cmax[index],cmin[index],\n",
     "\t\trho_star_flux[index],tau_flux[index],st_x_flux[index],st_y_flux[index],st_z_flux[index]);\n",
     "\n",
     "    \n",
@@ -306,7 +306,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for add_fluxes_and_source_terms_to_hydro_rhss.C: PASSED!\n"
+      "Validation test for add_fluxes_and_source_terms_to_hydro_rhss.C: FAILED!\n",
+      "Diff:\n",
+      "14c14\n",
+      "< static inline void mhdflux(int i,int j,int k,const int flux_dirn,CCTK_REAL *Ul,CCTK_REAL *Ur,  CCTK_REAL *FACEVAL,CCTK_REAL *FACEVAL_LAPSE_PSI4,eos_struct &eos,\n",
+      "---\n",
+      "> static inline void mhdflux(int i,int j,int k,const int flux_dirn,CCTK_REAL *Ul,CCTK_REAL *Ur,  CCTK_REAL *FACEVAL,CCTK_REAL *FACEVAL_LAPSE_PSI4,eos_struct &eos, CCTK_REAL Gamma_th,\n",
+      "85c85\n",
+      "< \tmhdflux(i,j,k,flux_dirn,Ul  ,Ur  ,FACEVAL  ,FACEVAL_LAPSE_PSI4  ,eos, cmax[index],cmin[index],\n",
+      "---\n",
+      "> \tmhdflux(i,j,k,flux_dirn,Ul  ,Ur  ,FACEVAL  ,FACEVAL_LAPSE_PSI4  ,eos, Gamma_th, cmax[index],cmin[index],\n"
      ]
     }
    ],
@@ -374,25 +383,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 52594 bytes to Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "latex_nrpy_style_path = os.path.join(nrpy_dir_path,\"latex_nrpy_style.tplx\")\n",
     "#!jupyter nbconvert --to latex --template $latex_nrpy_style_path Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.ipynb\n",
