IllinoisGRMHD: PPEOS Patch -- Still needs some love to compile

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__compute_B_and_Bstagger_from_A.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__compute_B_and_Bstagger_from_A.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/compute_B_and_Bstagger_from_A.C\n"
+      "Overwriting ../src/compute_B_and_Bstagger_from_A.C\n"
      ]
     }
    ],
