--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu.C\n"
+      "Overwriting ../src/compute_tau_rhs_extrinsic_curvature_terms_and_TUPmunu.C\n"
      ]
     }
    ],
