--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__outer_boundaries.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__outer_boundaries.ipynb
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/outer_boundaries.C\n"
+      "Overwriting ../src/outer_boundaries.C\n"
      ]
     }
    ],
@@ -204,6 +204,7 @@
     "#include \"cctk_Parameters.h\"\n",
     "\n",
     "#include \"IllinoisGRMHD_headers.h\"\n",
+    "#include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n",
     "#include \"inlined_functions.C\"\n",
     "\n",
     "#define IDX(i,j,k) CCTK_GFINDEX3D(cctkGH,(i),(j),(k))\n",
@@ -617,7 +618,9 @@
      "text": [
       "Validation test for outer_boundaries.C: FAILED!\n",
       "Diff:\n",
-      "154,155c154,165\n",
+      "19a20\n",
+      "> #include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n",
+      "154,155c155,166\n",
       "< \n",
       "<   // FIXME: only for single gamma-law EOS.\n",
       "---\n",
@@ -633,7 +636,7 @@
       ">    * source file for the documentation on the\n",
       ">    * function.\n",
       ">    */\n",
-      "157,165c167,168\n",
+      "157,165c168,169\n",
       "<   eos.neos=neos;\n",
       "<   eos.K_poly=K_poly;\n",
       "<   eos.rho_tab[0]=rho_tab[0];\n",
