--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
@@ -162,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/driver_conserv_to_prims.C\n"
+      "Overwriting ../src/driver_conserv_to_prims.C\n"
      ]
     }
    ],
@@ -208,6 +208,7 @@
     "#include \"Symmetry.h\"\n",
     "\n",
     "#include \"IllinoisGRMHD_headers.h\"\n",
+    "#include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n",
     "#include \"harm_primitives_headers.h\"\n",
     "#include \"harm_u2p_util.c\"\n",
     "#include \"inlined_functions.C\"\n",
@@ -1176,7 +1177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/harm_primitives_lowlevel.C\n"
+      "Overwriting ../src/harm_primitives_lowlevel.C\n"
      ]
     }
    ],
@@ -2252,7 +2253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/font_fix_gamma_law.C\n"
+      "Overwriting ../src/font_fix_gamma_law.C\n"
      ]
     }
    ],
@@ -2414,7 +2415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/harm_primitives_headers.h\n"
+      "Overwriting ../src/harm_primitives_headers.h\n"
      ]
     }
    ],
