--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Configuration_files.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Configuration_files.ipynb
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/make.code.defn\n"
+      "Overwriting ../src/make.code.defn\n"
      ]
     }
    ],
