--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/symmetry__set_gzs_staggered_gfs.C\n"
+      "Overwriting ../src/symmetry__set_gzs_staggered_gfs.C\n"
      ]
     }
    ],
