IllinoisGRMHD: PPEOS Patch -- Fixed all the compilation issues

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.ipynb
@@ -206,6 +206,7 @@
     "void IllinoisGRMHD_set_symmetry_gzs_staggered(const cGH *cctkGH, const int *cctk_lsh,CCTK_REAL *X,CCTK_REAL *Y,CCTK_REAL *Z,  CCTK_REAL *gridfunc,\n",
     "                                              CCTK_REAL *gridfunc_syms,int stagger_x,int stagger_y,int stagger_z);\n",
     "\n",
+    "#include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n",
     "#endif // ILLINOISGRMHD_HEADERS_H\n",
     "\n"
    ]
@@ -241,7 +242,9 @@
       "---\n",
       ">   CCTK_REAL rho_ppoly_tab[MAX_EOS_PARAMS-1];\n",
       ">   CCTK_REAL eps_integ_const[MAX_EOS_PARAMS],K_ppoly_tab[MAX_EOS_PARAMS],Gamma_ppoly_tab[MAX_EOS_PARAMS];\n",
-      "> };\n"
+      "> };\n",
+      "91a91\n",
+      "> #include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n"
      ]
     }
    ],
