--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
@@ -2573,9 +2573,11 @@
      "text": [
       "Validation test for driver_conserv_to_prims.C: FAILED!\n",
       "Diff:\n",
-      "41a42\n",
+      "40a41\n",
+      "> #include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n",
+      "41a43\n",
       "> #include \"harm_u2p_util.c\"\n",
-      "51,54c52,63\n",
+      "51,54c53,64\n",
       "< \n",
       "<   // FIXME: This is definitely one of the places we need to look at later.\n",
       "<   //           Will leave this comment to emphasize the \"FIXME\" below.\n",
@@ -2593,7 +2595,7 @@
       ">    * source file for the documentation on the\n",
       ">    * function.\n",
       ">    */\n",
-      "56,63c65\n",
+      "56,63c66\n",
       "<   eos.neos=neos;\n",
       "<   eos.K_poly=K_poly;\n",
       "<   eos.rho_tab[0]=rho_tab[0];\n",
@@ -2604,11 +2606,11 @@
       "<   eos.gamma_tab[0]=gamma_tab[0]; eos.gamma_tab[1]=gamma_tab[1];\n",
       "---\n",
       ">   initialize_EOS_struct_from_input(eos);\n",
-      "93,95d94\n",
+      "93,95d95\n",
       "<   int gamma_equals2 = 1;\n",
       "<   if (fabs(gamma_th-2.0) > 1.e-10) gamma_equals2 = 0;\n",
       "< \n",
-      "245,250c244,251\n",
+      "245,250c245,252\n",
       "<           PRIMS[RHOB]      =rho_b_atm;\n",
       "<           if(gamma_equals2) {\n",
       "<             PRIMS[PRESSURE]=K_poly*SQR(rho_b_atm);\n",
@@ -2624,13 +2626,13 @@
       ">           CCTK_REAL Gamma_ppoly_tab = eos.K_ppoly_tab[polytropic_index];\n",
       ">           PRIMS[PRESSURE]      = K_ppoly_tab*pow(rho_b_atm,Gamma_ppoly_tab);\n",
       ">             \n",
-      "364,365c365,366\n",
+      "364,365c366,367\n",
       "<     CCTK_REAL gamma_th=2.0;\n",
       "<     myfile.write((char*)&gamma_th, 1*sizeof(CCTK_REAL));\n",
       "---\n",
       ">     CCTK_REAL Gamma_th=2.0;\n",
       ">     myfile.write((char*)&Gamma_th, 1*sizeof(CCTK_REAL));\n",
-      "368,373c369,375\n",
+      "368,373c370,376\n",
       "<     myfile.write((char*)gamma_tab, (neos+1)*sizeof(CCTK_REAL));\n",
       "<     myfile.write((char*)k_tab,     (neos+1)*sizeof(CCTK_REAL));\n",
       "< \n",
