IllinoisGRMHD: PPEOS Patch -- Updated all files so that the source code generated by this NRPy+ module can be compiled inside the Cactus framework. The ETK Thorns generates are: 1. IllinoisGRMHD: with support for a hybrid EOS with a piecewise polytropic cold EOS; 2. Convert_to_HydroBase; 3. ID_converter_ILGRMHD.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__ETKThorn__Convert_to_HydroBase.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__ETKThorn__Convert_to_HydroBase.ipynb
@@ -69,21 +69,15 @@
    "outputs": [],
    "source": [
     "# Step 0: Creation of the IllinoisGRMHD source directory\n",
-    "# Step 0a: Add NRPy's directory to the path\n",
-    "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
+    "# Step 0a: Load up cmdline_helper and create the directory\n",
     "import os,sys\n",
-    "nrpy_dir_path = os.path.join(\"..\",\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
-    "\n",
-    "# Step 0b: Load up cmdline_helper and create the directory\n",
     "import cmdline_helper as cmd\n",
     "CtH_dir_path = os.path.join(\"..\",\"Convert_to_HydroBase\")\n",
     "cmd.mkdir(CtH_dir_path)\n",
     "CtH_src_dir_path = os.path.join(CtH_dir_path,\"src\")\n",
     "cmd.mkdir(CtH_src_dir_path)\n",
     "\n",
-    "# Step 0c: Create the output file path \n",
+    "# Step 0b: Create the output file path \n",
     "outfile_path__Convert_to_HydroBase__source    = os.path.join(CtH_src_dir_path,\"Convert_to_HydroBase.C\")\n",
     "outfile_path__Convert_to_HydroBase__make      = os.path.join(CtH_src_dir_path,\"make.code.defn\")\n",
     "outfile_path__Convert_to_HydroBase__param     = os.path.join(CtH_dir_path,\"param.ccl\")\n",
