--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__ETKThorn__ID_converter_ILGRMHD.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__ETKThorn__ID_converter_ILGRMHD.ipynb
@@ -69,26 +69,20 @@
    "outputs": [],
    "source": [
     "# Step 0: Creation of the IllinoisGRMHD source directory\n",
-    "# Step 0a: Add NRPy's directory to the path\n",
-    "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
+    "# Step 0a: Load up cmdline_helper and create the directory\n",
     "import os,sys\n",
-    "nrpy_dir_path = os.path.join(\"..\",\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
-    "\n",
-    "# Step 0b: Load up cmdline_helper and create the directory\n",
     "import cmdline_helper as cmd\n",
-    "CtH_dir_path = os.path.join(\"..\",\"ID_converter_ILGRMHD\")\n",
-    "cmd.mkdir(CtH_dir_path)\n",
-    "CtH_src_dir_path = os.path.join(CtH_dir_path,\"src\")\n",
-    "cmd.mkdir(CtH_src_dir_path)\n",
+    "IDcIGM_dir_path = os.path.join(\"..\",\"ID_converter_ILGRMHD\")\n",
+    "cmd.mkdir(IDcIGM_dir_path)\n",
+    "IDcIGM_src_dir_path = os.path.join(IDcIGM_dir_path,\"src\")\n",
+    "cmd.mkdir(IDcIGM_src_dir_path)\n",
     "\n",
-    "# Step 0c: Create the output file path \n",
-    "outfile_path__ID_converter_ILGRMHD__source    = os.path.join(CtH_src_dir_path,\"set_IllinoisGRMHD_metric_GRMHD_variables_based_on_HydroBase_and_ADMBase_variables.C\")\n",
-    "outfile_path__ID_converter_ILGRMHD__make      = os.path.join(CtH_src_dir_path,\"make.code.defn\")\n",
-    "outfile_path__ID_converter_ILGRMHD__param     = os.path.join(CtH_dir_path,\"param.ccl\")\n",
-    "outfile_path__ID_converter_ILGRMHD__interface = os.path.join(CtH_dir_path,\"interface.ccl\")\n",
-    "outfile_path__ID_converter_ILGRMHD__schedule  = os.path.join(CtH_dir_path,\"schedule.ccl\")"
+    "# Step 0b: Create the output file path \n",
+    "outfile_path__ID_converter_ILGRMHD__source    = os.path.join(IDcIGM_src_dir_path,\"set_IllinoisGRMHD_metric_GRMHD_variables_based_on_HydroBase_and_ADMBase_variables.C\")\n",
+    "outfile_path__ID_converter_ILGRMHD__make      = os.path.join(IDcIGM_src_dir_path,\"make.code.defn\")\n",
+    "outfile_path__ID_converter_ILGRMHD__param     = os.path.join(IDcIGM_dir_path,\"param.ccl\")\n",
+    "outfile_path__ID_converter_ILGRMHD__interface = os.path.join(IDcIGM_dir_path,\"interface.ccl\")\n",
+    "outfile_path__ID_converter_ILGRMHD__schedule  = os.path.join(IDcIGM_dir_path,\"schedule.ccl\")"
    ]
   },
   {
