IllinoisGRMHD/Tutorial-IllinoisGRMHD__ETKThorn__*: add NRPy+ path so these can find cmdline_helper

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__ETKThorn__Convert_to_HydroBase.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__ETKThorn__Convert_to_HydroBase.ipynb
@@ -71,6 +71,10 @@
     "# Step 0: Creation of the IllinoisGRMHD source directory\n",
     "# Step 0a: Load up cmdline_helper and create the directory\n",
     "import os,sys\n",
+    "nrpy_dir_path = os.path.join(\"..\",\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
+    "\n",
     "import cmdline_helper as cmd\n",
     "CtH_dir_path = os.path.join(\"..\",\"Convert_to_HydroBase\")\n",
     "cmd.mkdir(CtH_dir_path)\n",
